Refactored stuff to match changes in Apoli 2.12.0-alpha.9